[package]
name = "tf-asset-loader"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Utility for loading assets from tf2 data files"
repository = "https://github.com/icewind1991/tf-asset-loader"
rust-version = "1.70.0"

[dependencies]
steamlocate = "=2.0.0-beta.2"
tracing = "0.1.40"
vpk = { version = "0.2.0", optional = true }
vbsp = { version = "0.6.0", optional = true }
thiserror = "1.0.63"
zip = { package = "zip-lzma", version = "0.6.3", default-features = false, features = ["lzma"], optional = true }

[features]
bsp = ["vbsp", "zip"]
default = ["vpk"]
