[package]
name = "tf-asset-loader"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "Utility for loading assets from tf2 data files"
repository = "https://github.com/icewind1991/tf-asset-loader"
rust-version = "1.70.0"

[dependencies]
steamlocate = "2.0.0"
tracing = "0.1.41"
vpk = { version = "0.2.0", optional = true }
vbsp = { version = "0.6.0", optional = true }
thiserror = "2.0.7"
zip = { package = "zip-lzma", version = "0.6.3", default-features = false, features = ["lzma"], optional = true }
path-dedot = "3.1.1"

[features]
bsp = ["vbsp", "zip"]
default = ["vpk"]
