[package]
name = "tf-asset-loader"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Utility for loading assets from tf2 data files"
repository = "https://github.com/icewind1991/tf-asset-loader"
rust-version = "1.85.0"

[dependencies]
steamlocate = "2.0.1"
tracing = "0.1.41"
vpk = { version = "0.3.0", optional = true }
vbsp = { version = "0.8.2", optional = true }
thiserror = "2.0.12"
zip = { package = "zip-lzma", version = "0.6.3", default-features = false, features = ["lzma"], optional = true }
path-dedot = "3.1.1"

[features]
bsp = ["vbsp", "zip"]
default = ["vpk"]
